# particle-factory

./: CMakeLists.txt  LICENSE  diagaram.puml
Kernel/: CMakeLists.txt  CircleSection.cpp  CircleSection.h  File.cpp  File.h  Plate.cpp  Plate.h  Point.cpp  Point.h  RenderBondedParticles.cpp  RenderBondedParticles.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  XDirection.cpp  XDirection.h  YDirection.cpp  YDirection.h  ZDirection.cpp  ZDirection.h
examples/: CMakeLists.txt
examples/IGroup/: CMakeLists.txt
examples/IGroup/IP/: CMakeLists.txt  IParticle.cpp
examples/IGroup/TP/: CMakeLists.txt  TParticle.cpp
examples/IGroup/UP/: CMakeLists.txt  UParticle.cpp
examples/SolidGroup/: CMakeLists.txt
examples/SolidGroup/Disk/: CMakeLists.txt  Disk.cpp
examples/SolidGroup/RodP/: CMakeLists.txt  RodParticle.cpp
examples/SolidGroup/SlabP/: CMakeLists.txt  Slab.cpp
examples/SolidGroup/SphereP/: CMakeLists.txt  SphereParticle.cpp
examples/vtkCourse/: CMakeLists.txt  vtkRun.cpp
src/: CMakeLists.txt  CircleSection.cpp  CircleSection.h  File.cpp  File.h  Plate.cpp  Plate.h  RenderShape.cpp  RenderShape.h  Shape.cpp  Shape.h  Sphere.h
